{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 323,
  "lineage": "d071a789-1ad6-0111-e1b5-7ebbbd7b0938",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "backend_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/loadBalancers/myapp-lb/frontendIPConfigurations/LoadBalancerFrontEnd",
                "name": "LoadBalancerFrontEnd",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/publicIPAddresses/myapp-frontend-pip"
              }
            ],
            "id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/loadBalancers/myapp-lb",
            "location": "westus2",
            "name": "myapp-lb",
            "resource_group_name": "rg-myapp",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.frontend_pip",
            "azurerm_resource_group.rg",
            "random_integer.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "backend_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/loadBalancers/myapp-lb/backendAddressPools/backend-pool",
            "loadbalancer_id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/loadBalancers/myapp-lb",
            "name": "backend-pool"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.backend_lb",
            "azurerm_public_ip.frontend_pip",
            "azurerm_resource_group.rg",
            "random_integer.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_nat_rule",
      "name": "example1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/loadBalancers/myapp-lb/backendAddressPools/backend-pool",
            "backend_port": 22,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "floating_ip_enabled": false,
            "frontend_ip_configuration_id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/loadBalancers/myapp-lb/frontendIPConfigurations/LoadBalancerFrontEnd",
            "frontend_ip_configuration_name": "LoadBalancerFrontEnd",
            "frontend_port": 0,
            "frontend_port_end": 3389,
            "frontend_port_start": 3000,
            "id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/loadBalancers/myapp-lb/inboundNatRules/ssh",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/loadBalancers/myapp-lb",
            "name": "ssh",
            "protocol": "Tcp",
            "resource_group_name": "rg-myapp",
            "tcp_reset_enabled": false
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.backend_lb",
            "azurerm_lb_backend_address_pool.backend_pool",
            "azurerm_public_ip.frontend_pip",
            "azurerm_resource_group.rg",
            "random_integer.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "health_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/loadBalancers/myapp-lb/probes/health_probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/loadBalancers/myapp-lb",
            "name": "health_probe",
            "number_of_probes": 2,
            "port": 8000,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.backend_lb",
            "azurerm_public_ip.frontend_pip",
            "azurerm_resource_group.rg",
            "random_integer.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "http_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/loadBalancers/myapp-lb/backendAddressPools/backend-pool"
            ],
            "backend_port": 8000,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": true,
            "floating_ip_enabled": false,
            "frontend_ip_configuration_id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/loadBalancers/myapp-lb/frontendIPConfigurations/LoadBalancerFrontEnd",
            "frontend_ip_configuration_name": "LoadBalancerFrontEnd",
            "frontend_port": 80,
            "id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/loadBalancers/myapp-lb/loadBalancingRules/http",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/loadBalancers/myapp-lb",
            "name": "http",
            "probe_id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/loadBalancers/myapp-lb/probes/health_probe",
            "protocol": "Tcp",
            "tcp_reset_enabled": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.backend_lb",
            "azurerm_lb_backend_address_pool.backend_pool",
            "azurerm_lb_probe.health_probe",
            "azurerm_public_ip.frontend_pip",
            "azurerm_resource_group.rg",
            "random_integer.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/natGateways/example-NatGateway",
            "idle_timeout_in_minutes": 4,
            "location": "westus2",
            "name": "example-NatGateway",
            "resource_group_name": "rg-myapp",
            "resource_guid": "8fbd3080-b158-41b2-914f-a6398741bef2",
            "sku_name": "Standard"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "example-NatGateway",
            "resource_group_name": "rg-myapp",
            "subscription_id": "4dd8cf87-5a76-49f4-8de7-2575f38c63ba"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway_public_ip_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/natGateways/example-NatGateway|/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/publicIPAddresses/example-PIP",
            "nat_gateway_id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/natGateways/example-NatGateway",
            "public_ip_address_id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/publicIPAddresses/example-PIP"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_nat_gateway.nat-gateway",
            "azurerm_public_ip.nat-gateway-pip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "backend_nics",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/networkInterfaces/myapp-backend-nic-0",
            "internal_domain_name_suffix": "qyypyazrlw4unociuovjmispzc.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/virtualNetworks/myapp-vnet/subnets/myapp-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus2",
            "name": "myapp-backend-nic-0",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg-myapp"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "myapp-backend-nic-0",
            "resource_group_name": "rg-myapp",
            "subscription_id": "4dd8cf87-5a76-49f4-8de7-2575f38c63ba"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/networkInterfaces/myapp-backend-nic-1",
            "internal_domain_name_suffix": "qyypyazrlw4unociuovjmispzc.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/virtualNetworks/myapp-vnet/subnets/myapp-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus2",
            "name": "myapp-backend-nic-1",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "rg-myapp"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "myapp-backend-nic-1",
            "resource_group_name": "rg-myapp",
            "subscription_id": "4dd8cf87-5a76-49f4-8de7-2575f38c63ba"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/loadBalancers/myapp-lb/backendAddressPools/backend-pool",
            "id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/networkInterfaces/myapp-backend-nic-0/ipConfigurations/internal|/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/loadBalancers/myapp-lb/backendAddressPools/backend-pool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/networkInterfaces/myapp-backend-nic-0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.backend_lb",
            "azurerm_lb_backend_address_pool.backend_pool",
            "azurerm_network_interface.backend_nics",
            "azurerm_public_ip.frontend_pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet",
            "random_integer.suffix"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/loadBalancers/myapp-lb/backendAddressPools/backend-pool",
            "id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/networkInterfaces/myapp-backend-nic-1/ipConfigurations/internal|/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/loadBalancers/myapp-lb/backendAddressPools/backend-pool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/networkInterfaces/myapp-backend-nic-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.backend_lb",
            "azurerm_lb_backend_address_pool.backend_pool",
            "azurerm_network_interface.backend_nics",
            "azurerm_public_ip.frontend_pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet",
            "random_integer.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "backend_nics_nsg_assn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/networkInterfaces/myapp-backend-nic-0|/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/networkSecurityGroups/myapp-nsg",
            "network_interface_id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/networkInterfaces/myapp-backend-nic-0",
            "network_security_group_id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/networkSecurityGroups/myapp-nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.backend_nics",
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/networkInterfaces/myapp-backend-nic-1|/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/networkSecurityGroups/myapp-nsg",
            "network_interface_id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/networkInterfaces/myapp-backend-nic-1",
            "network_security_group_id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/networkSecurityGroups/myapp-nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.backend_nics",
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/networkSecurityGroups/myapp-nsg",
            "location": "westus2",
            "name": "myapp-nsg",
            "resource_group_name": "rg-myapp",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "myapp-nsg",
            "resource_group_name": "rg-myapp",
            "subscription_id": "4dd8cf87-5a76-49f4-8de7-2575f38c63ba"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8000",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/networkSecurityGroups/myapp-nsg/securityRules/Allow-HTTP",
            "name": "Allow-HTTP",
            "network_security_group_name": "myapp-nsg",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "rg-myapp",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow-HTTP",
            "network_security_group_name": "myapp-nsg",
            "resource_group_name": "rg-myapp",
            "subscription_id": "4dd8cf87-5a76-49f4-8de7-2575f38c63ba"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/networkSecurityGroups/myapp-nsg/securityRules/Allow-SSH",
            "name": "Allow-SSH",
            "network_security_group_name": "myapp-nsg",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "rg-myapp",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow-SSH",
            "network_security_group_name": "myapp-nsg",
            "resource_group_name": "rg-myapp",
            "subscription_id": "4dd8cf87-5a76-49f4-8de7-2575f38c63ba"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "frontend_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "myapp-frontend-98314",
            "fqdn": "myapp-frontend-98314.westus2.cloudapp.azure.com",
            "id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/publicIPAddresses/myapp-frontend-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.154.175.250",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "myapp-frontend-pip",
            "resource_group_name": "rg-myapp",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_integer.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "nat-gateway-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/publicIPAddresses/example-PIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.155.10.196",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "example-PIP",
            "resource_group_name": "rg-myapp",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/virtualNetworks/myapp-vnet/subnets/myapp-subnet",
            "name": "myapp-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-myapp",
            "virtual_network_name": "myapp-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "myapp-subnet",
            "resource_group_name": "rg-myapp",
            "subscription_id": "4dd8cf87-5a76-49f4-8de7-2575f38c63ba",
            "virtual_network_name": "myapp-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/virtualNetworks/myapp-vnet/subnets/myapp-subnet",
            "nat_gateway_id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/natGateways/example-NatGateway",
            "subnet_id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/virtualNetworks/myapp-vnet/subnets/myapp-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_nat_gateway.nat-gateway",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "03fc3086-5d31-46bd-b848-a3aa96224fca",
            "id": "/subscriptions/4dd8cf87-5a76-49f4-8de7-2575f38c63ba/resourceGroups/rg-myapp/providers/Microsoft.Network/virtualNetworks/myapp-vnet",
            "location": "westus2",
            "name": "myapp-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-myapp"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "myapp-vnet",
            "resource_group_name": "rg-myapp",
            "subscription_id": "4dd8cf87-5a76-49f4-8de7-2575f38c63ba"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}